[gd_scene load_steps=8 format=2]

[ext_resource path="res://font/freepixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://art/flag/pt-BR.png" type="Texture" id=2]
[ext_resource path="res://art/flag/en.png" type="Texture" id=3]
[ext_resource path="res://scene/interface/language.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 1 )

[node name="language" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="language" type="Label" parent="."]
anchor_right = 1.0
margin_top = 77.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Language"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pt" type="TextureButton" parent="."]
margin_left = 331.126
margin_top = 241.33
margin_right = 731.126
margin_bottom = 331.33
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flag" type="TextureRect" parent="pt"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="name" type="Label" parent="pt"]
margin_left = 145.0
margin_top = 0.877533
margin_right = 406.0
margin_bottom = 88.8775
custom_fonts/font = SubResource( 3 )
text = "PortuguÃªs"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="en" type="TextureButton" parent="."]
margin_left = 330.003
margin_top = 353.576
margin_right = 730.003
margin_bottom = 443.576
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flag" type="TextureRect" parent="en"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="name" type="Label" parent="en"]
margin_left = 145.0
margin_top = 2.0
margin_right = 406.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 3 )
text = "English"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="pt" to="." method="_on_pt_mouse_entered"]
[connection signal="mouse_exited" from="pt" to="." method="_on_pt_mouse_exited"]
[connection signal="pressed" from="pt" to="." method="_on_pt_pressed"]
[connection signal="mouse_entered" from="en" to="." method="_on_en_mouse_entered"]
[connection signal="mouse_exited" from="en" to="." method="_on_en_mouse_exited"]
[connection signal="pressed" from="en" to="." method="_on_en_pressed"]
